take off control method
